--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.7",
     "@zxing/ngx-scanner": "^19.0.0",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^11.6.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
