--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.3.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
