--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.7",
+    "@types/qrcode": "^1.5.5",
     "@zxing/ngx-scanner": "^19.0.0",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
@@ -29,6 +30,7 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.3.0",
     "ng2-charts": "^8.0.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
